Working on IROS chapter

--- a/DawsonThesis.tex
+++ b/DawsonThesis.tex
@@ -92,7 +92,7 @@
 
 %%%%%%%%%  Representative set-up for biblatex  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\usepackage[style=ieee,maxbibnames=10,sorting=none,backend=biber]{biblatex}% style=ext-numeric-comp,articlein=false,giveninits=true
+\usepackage[backend=biber,style=ieee,maxbibnames=10,sorting=none]{biblatex}% style=ext-numeric-comp,articlein=false,giveninits=true
 	\DefineBibliographyStrings{english}{url= \textsc{url} ,  }% replaces default "[Online]. Available" by "URL"
 
 
@@ -295,7 +295,7 @@
 \include{chapters/introduction}
 \include{chapters/literature_review}
 \include{chapters/rss}
-% \include{chapters/iros}
+\include{chapters/iros}
 % \include{chapters/corl}
 % \include{chapters/icml}
 % \include{chapters/local_methods}
