--- a/main.bib
+++ b/main.bib
@@ -824,6 +824,23 @@
   file = {/home/cbd/Zotero/storage/TZYLKIU7/Chen et al. - 2018 - Neural Ordinary Differential Equations.pdf}
 }
 
+@inproceedings{chenNL2TLTransformingNatural2023,
+  title = {{{NL2TL}}: {{Transforming Natural Languages}} to {{Temporal Logics}} Using {{Large Language Models}}},
+  shorttitle = {{{NL2TL}}},
+  booktitle = {Proceedings of the 2023 {{Conference}} on {{Empirical Methods}} in {{Natural Language Processing}}},
+  author = {Chen, Yongchao and Gandhi, Rujul and Zhang, Yang and Fan, Chuchu},
+  editor = {Bouamor, Houda and Pino, Juan and Bali, Kalika},
+  year = {2023},
+  month = dec,
+  pages = {15880--15903},
+  publisher = {{Association for Computational Linguistics}},
+  address = {{Singapore}},
+  doi = {10.18653/v1/2023.emnlp-main.985},
+  urldate = {2024-02-24},
+  abstract = {Temporal Logic (TL) can be used to rigorously specify complex high-level specification for systems in many engineering applications. The translation between natural language (NL) and TL has been under-explored due to the lack of dataset and generalizable model across different application domains. In this paper, we propose an accurate and generalizable transformation framework of English instructions from NL to TL, exploring the use of Large Language Models (LLMs) at multiple stages. Our contributions are twofold. First, we develop a framework to create a dataset of NL-TL pairs combining LLMs and human annotation. We publish a dataset with 23K NL-TL pairs. Then, we finetune T5 models on the lifted versions (i.e., the specific Atomic Propositions (AP) are hidden) of the NL and TL. The enhanced generalizability originates from two aspects: 1) Usage of lifted NL-TL characterizes common logical structures, without constraints of specific domains. 2) Application of LLMs in dataset creation largely enhances corpus richness. We test the generalization of trained models on five varied domains. To achieve full NL-TL transformation, we either combine the lifted model with AP recognition task or do the further finetuning on each specific domain. During the further finetuning, our model achieves higher accuracy ({\textbackslash}textgreater 95\%) using only {\textbackslash}textless10\% training data, compared with the baseline sequence to sequence (Seq2Seq) model.},
+  file = {/home/cbd/Zotero/storage/AMYJKY9C/Chen et al. - 2023 - NL2TL Transforming Natural Languages to Temporal .pdf}
+}
+
 @misc{chenStochasticGradientHamiltonian2014,
   title = {Stochastic {{Gradient Hamiltonian Monte Carlo}}},
   author = {Chen, Tianqi and Fox, Emily B. and Guestrin, Carlos},
@@ -2308,6 +2325,18 @@
   file = {/home/cbd/Zotero/storage/IE4QMW6D/Kaipio and Somersalo - 2005 - Statistical and Computational Inverse Problems.pdf}
 }
 
+@article{kantaros20,
+  title = {{{STyLuS}}*: {{A}} Temporal Logic Optimal Control Synthesis Algorithm for Large-Scale Multi-Robot Systems},
+  author = {Kantaros, Yiannis and Zavlanos, Michael M},
+  year = {2020},
+  journal = {The International Journal of Robotics Research},
+  volume = {39},
+  number = {7},
+  eprint = {https://doi.org/10.1177/0278364920913922},
+  pages = {812--836},
+  doi = {10.1177/0278364920913922}
+}
+
 @article{kapinskiSimulationBasedApproachesVerification2016,
   title = {Simulation-{{Based Approaches}} for {{Verification}} of {{Embedded Control Systems}}: {{An Overview}} of {{Traditional}} and {{Advanced Modeling}}, {{Testing}}, and {{Verification Techniques}}},
   shorttitle = {Simulation-{{Based Approaches}} for {{Verification}} of {{Embedded Control Systems}}},
@@ -3400,6 +3429,20 @@
   file = {/home/cbd/Zotero/storage/W4H37753/Rahimian and Mehrotra - 2022 - Distributionally Robust Optimization A Review.pdf;/home/cbd/Zotero/storage/HSK97XE6/1908.html}
 }
 
+@inproceedings{raman15,
+  title = {Reactive Synthesis from Signal Temporal Logic Specifications},
+  booktitle = {Proceedings of the 18th International Conference on Hybrid Systems: {{Computation}} and Control},
+  author = {Raman, Vasumathi and Donz{\'e}, Alexandre and Sadigh, Dorsa and Murray, Richard M. and Seshia, Sanjit A.},
+  year = {2015},
+  series = {{{HSCC}} '15},
+  pages = {239--248},
+  publisher = {{Association for Computing Machinery}},
+  address = {{New York, NY, USA}},
+  doi = {10.1145/2728606.2728628},
+  abstract = {We present a counterexample-guided inductive synthesis approach to controller synthesis for cyber-physical systems subject to signal temporal logic (STL) specifications, operating in potentially adversarial nondeterministic environments. We encode STL specifications as mixed integer-linear constraints on the variables of a discrete-time model of the system and environment dynamics, and solve a series of optimization problems to yield a satisfying control sequence. We demonstrate how the scheme can be used in a receding horizon fashion to fulfill properties over unbounded horizons, and present experimental results for reactive controller synthesis for case studies in building climate control and autonomous driving.},
+  isbn = {978-1-4503-3433-4}
+}
+
 @inproceedings{ramdasDecreasingPowerKernel2015,
   title = {On the Decreasing Power of Kernel and Distance Based Nonparametric Hypothesis Tests in High Dimensions},
   booktitle = {Proceedings of the {{Twenty-Ninth AAAI Conference}} on {{Artificial Intelligence}}},
@@ -4297,6 +4340,15 @@
   abstract = {Markov Chain Monte--Carlo (MCMC) is an increasingly popular method for obtaining information about distributions, especially for estimating posterior distributions in Bayesian inference. This article provides a very basic introduction to MCMC sampling. It describes what MCMC is, and what it can be used for, with simple illustrative examples. Highlighted are some of the benefits and limitations of MCMC sampling, as well as different approaches to circumventing the limitations most likely to trouble cognitive scientists.},
   langid = {english},
   file = {/home/cbd/Zotero/storage/5C6CAKIY/van Ravenzwaaij et al. - 2018 - A simple introduction to Markov Chain Monte–Carlo .pdf}
+}
+
+@inproceedings{vasile17,
+  title = {Sampling-Based Synthesis of Maximally-Satisfying Controllers for Temporal Logic Specifications},
+  booktitle = {2017 {{IEEE}}/{{RSJ}} International Conference on Intelligent Robots and Systems ({{IROS}})},
+  author = {Vasile, Cristian-Ioan and Raman, Vasumathi and Karaman, Sertac},
+  year = {2017},
+  pages = {3840--3847},
+  doi = {10.1109/IROS.2017.8206235}
 }
 
 @article{veerRecedingHorizonPlanning2022,
