Work on corl/tro chapter

--- a/DawsonThesis.tex
+++ b/DawsonThesis.tex
@@ -296,7 +296,7 @@
 \include{chapters/literature_review}
 \include{chapters/rss}
 \include{chapters/iros}
-% \include{chapters/corl}
+\include{chapters/corl}
 % \include{chapters/icml}
 % \include{chapters/local_methods}
 % \include{chapters/global_methods}
