--- a/mymacros.sty
+++ b/mymacros.sty
@@ -88,3 +88,8 @@
 \newcommand{\eventually}{\lozenge}
 \newcommand{\always}{\square}
 \newcommand{\until}{\mathcal{U}}
+
+% For the CoRL chapter
+\newcommand{\gda}{\textit{ GD\textsubscript{a}}}
+\newcommand{\gdr}{\textit{GD\textsubscript{r}}}
+\newcommand{\ltc}{\textit{L2C}}
