Added corl/tro chapter, started icml chapter

--- a/DawsonThesis.tex
+++ b/DawsonThesis.tex
@@ -306,6 +306,7 @@
 
 \appendix
 \include{appendices/rss_appendix}
+\include{appendices/corl_appendix}
 
 
 %%% Bibliography  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
