--- a/mymacros.sty
+++ b/mymacros.sty
@@ -93,3 +93,10 @@
 \newcommand{\gda}{\textit{ GD\textsubscript{a}}}
 \newcommand{\gdr}{\textit{GD\textsubscript{r}}}
 \newcommand{\ltc}{\textit{L2C}}
+
+% For the ICML chapter
+\newcommand{\Dn}{\mathcal{D}_n}
+\newcommand{\Df}{\mathcal{D}_a}
+\newcommand{\Dkl}{D_{KL}}
+\newcommand{\Dklb}{\overline{D}_{KL}}
+\newcommand{\ouralg}{\textsc{CalNF}}
